
NOTE: Make sure you refresh the page! Sometimes you will not get the lastest update!

+ Means something was added
^ Means something was upgraded or changed
- Means something was removed
------------------------------------------------------------
Sep, 10
+ Added Tactical Weapon Pack 2
+ Added Glass City
+ Added Station 141
+ Added VELOCE
+ Added Core Ball
+ Added Protektor
^ Fixed error on about:blank embedder looking weird
^ Added a review from food to homepage
^ Fix issue #40
------------------------------------------------------------
Sep, 8
+ Added GOODNIGHT
------------------------------------------------------------
Sep, 7
+ Added 100ng
+ Started the open beta for our discord in browser plugin!
------------------------------------------------------------
Sep, 5
+ Added Random Reddit meme (going to make seperate repo for this soon)
+ Added Om Nom Bounce
------------------------------------------------------------
Aug, 29
+ Added Krunker
+ Added Precision Client
------------------------------------------------------------
Aug, 28
+ Updated site to v3
------------------------------------------------------------
May, 23
+ Added Subway Surfers
------------------------------------------------------------
May, 14
+ Added 50+ Games (Thank you ThatOnePerson!)
------------------------------------------------------------
May, 13
+ Added gimme the airpod
------------------------------------------------------------
May, 12
+ Added 1v1, made by Elijah
+ Added Big Tower Tiny Square
^ Set tab spacing to 2 on index
------------------------------------------------------------
May, 10
+ Added CircloO
------------------------------------------------------------
May, 6
+ Added Wolfenstein 3D
+ Added Hextris
^ Fixed issue with Eaglercraft not working
------------------------------------------------------------
May, 5
New discord link: https://discord.gg/wv6huJAwEv
------------------------------------------------------------
May, 4