@@ -351,6 +351,13 @@
         </div>
       </a>
 
+      <a href="projects/drive-mad/index.html" class="game-link container">
+        <div class="game-tile">
+          <img class="game-icon" src="projects/drive-mad/logo.jpg" alt="icon" />
+          <h1 class="game-title">Drive Mad <span class="badge"><i class="fa-solid fa-certificate"></i> New</span></h1>
+        </div>
+      </a>
+
       <a href="projects/ducklife1/index.html" class="game-link container">
         <div class="game-tile">
           <img class="game-icon" src="projects/ducklife1/ducklife.png" alt="icon" />
@@ -851,7 +858,7 @@
       <a href="projects/slope/index.html" class="game-link container">
         <div class="game-tile">
           <img class="game-icon" src="projects/slope/slope4.jpeg" alt="icon" />
-          <h1 class="game-title">Slope</h1>
+          <h1 class="game-title">Slope <span class="badge"><i class="fa-solid fa-fire"></i> Hot</span></h1>
         </div>
       </a>
 
@@ -956,7 +963,7 @@
       <a href="projects/subway-surfers/index.html" class="game-link container">
         <div class="game-tile">
           <img class="game-icon" src="projects/subway-surfers/img/splash.jpg" alt="icon" />
-          <h1 class="game-title">Subway Surfers</h1>
+          <h1 class="game-title">Subway Surfers<br><span class="badge"><i class="fa-solid fa-fire"></i> Hot</span></h1>
         </div>
       </a>
 
@@ -1005,7 +1012,7 @@
       <a href="projects/temple-run-2/index.html" class="game-link container">
         <div class="game-tile">
           <img class="game-icon" src="projects/temple-run-2/img/og-icon.png" alt="icon" />
-          <h1 class="game-title">Temple Run 2</h1>
+          <h1 class="game-title">Temple Run 2<br><span class="badge"><i class="fa-solid fa-fire"></i> Hot</span></h1>
         </div>
       </a>
 
